# PPTL

./: .gitignore  LICENSE  README.md  pyproject.toml
output/: README.md
scripts/: calculate_similarity.py  test_building4.py  test_paths.py  train_encoder.py  train_tide.py  train_tide_best.sh  train_tide_worst.sh  transfer_tide.py  transfer_tide_best_worst.sh  transfer_tide_none.sh  tune_hyperparameter.py  visualize_forecast.py
ts2vec/: .gitignore  datautils.py  ts2vec.py
ts2vec/notebooks/: test.ipynb
ts2vec/tasks/: forecasting.py
utils/: data.py
